--- a/Hotel_Booking_Website_Starter_Code/styles/index.css
+++ b/Hotel_Booking_Website_Starter_Code/styles/index.css
@@ -1,3 +1,34 @@
-body{
-    height: 100vh;
+html,body{
+    height: 100%;
+    margin: 0px;
+    background-color:#e0e0e0;
+}
+header{
+    background-color: rosybrown;
+    
+}
+footer{
+    background-color: rosybrown;
+   
+}
+
+#sec1{
+    background-image: url("https://media-cdn.tripadvisor.com/media/photo-o/14/10/2e/af/india.jpg");
+    height: 400px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+   
+}
+
+#sec2{
+    margin: 0px;
+    display: flex;
+    justify-content: center;   
+}
+
+
+#hotelcard{
+    border-radius: 25%;
+    padding: 30px;
 }
