--- a/Hotel_Booking_Website_Starter_Code/styles/index.css
+++ b/Hotel_Booking_Website_Starter_Code/styles/index.css
@@ -1,18 +1,9 @@
-html,body{
-    height: 100%;
-    margin: 0px;
-    background-color:#e0e0e0;
-}
-header{
-    background-color: rosybrown;
-    
-}
-footer{
-    background-color: rosybrown;
-   
+
+.view{
+    bottom: 0px;
 }
 
-#sec1{
+.sec1{
     background-image: url("https://media-cdn.tripadvisor.com/media/photo-o/14/10/2e/af/india.jpg");
     height: 400px;
     background-repeat: no-repeat;
@@ -20,15 +11,45 @@ footer{
     background-size: cover;
    
 }
-
-#sec2{
-    margin: 0px;
+.sec2{
     display: flex;
     justify-content: center;   
 }
 
 
 #hotelcard{
+    margin-top: 30px;
     border-radius: 25%;
     padding: 30px;
+}
+
+.viewmore{
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+}
+
+.city{
+    display: flex;
+    justify-content: center;
+    border-radius: 12px;
+    border: 1px transparent;
+    width: 400px;
+    font-size: 16px;
+    padding: 10px;
+    margin-top: 207px;
+    margin-bottom: 147px;
+    
+}
+
+.sec1{
+    display: flex;
+    border-radius: 12px;
+   border: 1px transparent;
+   border-color: white;
+   background-color: #f1f1f1;
+   padding: 10px;
+   font-size: 16px;
+   justify-content: center;
+
 }
