--- a/Hotel_Booking_Website_Starter_Code/styles/list.css
+++ b/Hotel_Booking_Website_Starter_Code/styles/list.css
@@ -1,25 +1,34 @@
-html,body{
-    height: 100%;
-    margin: 0px;
-    background-color:#e0e0e0;
-}
-header{
-    background-color: rosybrown;
-    
-}
-footer{
-    background-color: rosybrown;
-   
-}
-
 
 #divv{
-    margin: 2%;
-    width: 35%;
-    background-color: rgb(132,136,139);
+    background-color:  rgb(132,136,139);
+    width:40%;
+    margin:2%;
 }
 
 img{
     top: 0%;
     left: 0%;
+}
+
+.ul{
+    display: flex;
+    justify-content: center;
+    
+    margin-top: 80px;
+}
+
+#d1{
+    margin: 10px;
+}
+
+.listmap{
+    text-decoration: none;
+    color: rgb(48, 46, 46);
+}
+
+.Hcard{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    margin-left: 20px;
 }
