--- a/Hotel_Booking_Website_Starter_Code/styles/payment.css
+++ b/Hotel_Booking_Website_Starter_Code/styles/payment.css
@@ -1,29 +1,26 @@
-html,body{
-    height: 100%;
-    margin: 0%;
-    background-color:#e0e0e0;
-}
-
-header{
-    background-color: rosybrown;
-    
-}
-footer{
-    background-color: rosybrown;
-   
-}
-
 #div3{
         background-color: rgb(132, 136, 139);
         height: 20%;
         width: 50%;
-        margin: 0 auto;
+        margin-top:90px ;
+        margin-left: 380px;
+        
 }
+
+.paynow{
+    margin-bottom: 90px;
+}
+
+.pn{
+    text-decoration: none;
+    color: black;
+}
+
 
 #d3{
     margin: 2%;
 }
-
+  
 #table{
     margin: 2%;
     border: 1px solid black;
