--- a/Hotel_Booking_Website_Starter_Code/styles/index.css
+++ b/Hotel_Booking_Website_Starter_Code/styles/index.css
@@ -3,6 +3,78 @@
     bottom: 0px;
 }
 
+.maincontainer{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.container{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    margin-top: 30px;
+    border-radius: 25%;
+    height: 150px;
+    width: 150px;
+}
+
+
+.container:hover{
+    background-color:  rgba(0, 0, 0, 0.5); 
+    display: flex;
+    justify-content: space-evenly;   
+    margin-top: 30px;
+    border-radius: 25%;
+    height: 150px;
+    width: 150px;   
+}
+
+.container:hover>.cardd{
+    opacity: 0.3;
+}
+
+
+.container:hover>.alpha{
+    display: inline;
+    color: green;
+    font-size: 10px;
+    z-index: 1;
+    justify-content:center;
+    font-size: 10px;
+    
+}
+
+
+.card{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 30px;
+    border-radius: 25%;
+    height: 150px;
+    width: 150px;
+}
+
+#hotelcard{
+    display: flex;
+    justify-content: space-evenly;
+    box-shadow:10px 10px 10px rgb(65, 63, 63);
+    margin-top: 30px;
+    border-radius: 25%;
+    height: 150px;
+    width: 150px;
+}
+
+.alpha{
+    display: none;
+    top: 20px;
+    color: #f1f1f1;
+    margin-top: 30px;
+    border-radius: 25%;
+    height: 150px;
+    width: 150px;
+}
+
+
 .sec1{
     background-image: url("https://media-cdn.tripadvisor.com/media/photo-o/14/10/2e/af/india.jpg");
     height: 400px;
@@ -11,17 +83,7 @@
     background-size: cover;
    
 }
-.sec2{
-    display: flex;
-    justify-content: center;   
-}
 
-
-#hotelcard{
-    margin-top: 30px;
-    border-radius: 25%;
-    padding: 30px;
-}
 
 .viewmore{
     display: flex;
