--- a/Hotel_Booking_Website_Starter_Code/styles/list.css
+++ b/Hotel_Booking_Website_Starter_Code/styles/list.css
@@ -1,19 +1,40 @@
 
-#divv{
-    background-color:  rgb(132,136,139);
-    width:40%;
-    margin:2%;
+.sec{
+    display: flex;
+    flex-wrap: wrap;
 }
 
-img{
+.Hcard{
+    display: flex;
+    align-items: flex-start;
+    margin: 60px;
+    width: 40%;
+    background-color:  lightgrey;
+}
+
+.div12{
+    display: flex;
+    flex-direction: column;
+}
+
+.anchor{
+    text-decoration: none;
+    color: black;
+}
+
+.imghotel{
+    margin-right: 30px;
     top: 0%;
     left: 0%;
+    bottom: 0%;
+    height: 250px;
+    width: 250px;
+    background-size: cover;
 }
 
 .ul{
     display: flex;
     justify-content: center;
-    
     margin-top: 80px;
 }
 
@@ -26,9 +47,8 @@ img{
     color: rgb(48, 46, 46);
 }
 
-.Hcard{
+
+.gapcreation{
+    background-color:#e0e0e0;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    margin-left: 20px;
 }
