--- a/Hotel_Booking_Website_Starter_Code/styles/index.css
+++ b/Hotel_Booking_Website_Starter_Code/styles/index.css
@@ -3,60 +3,48 @@
     bottom: 0px;
 }
 
-.maincontainer{
+.maincontainer1{
     display: flex;
+    background-color:#e0e0e0;
     justify-content: space-evenly;
 }
 
-.container{
+.main{
     display: flex;
-    justify-content: space-evenly;
-    align-items: flex-end;
-    margin-top: 30px;
-    border-radius: 25%;
-    height: 150px;
-    width: 150px;
+    flex-direction: column;
+    background-color:#e0e0e0;
+    justify-content: center;
 }
 
-
-.container:hover{
-    background-color:  rgba(0, 0, 0, 0.5); 
+.m1{
     display: flex;
-    justify-content: space-evenly;   
+    justify-content: center;
     margin-top: 30px;
-    border-radius: 25%;
-    height: 150px;
-    width: 150px;   
-}
-
-.container:hover>.cardd{
-    opacity: 0.3;
 }
 
 
-.container:hover>.alpha{
-    display: inline;
-    color: green;
-    font-size: 10px;
-    z-index: 1;
-    justify-content:center;
-    font-size: 10px;
-    
+
+#sign-in-button1{
+    display: flex;
+    align-items: baseline;
+}
+
+.split{
+    display: flex;
+    flex-direction: column;
 }
 
 
 .card{
+   
     display: flex;
-    justify-content: space-evenly;
-    margin-top: 30px;
-    border-radius: 25%;
-    height: 150px;
-    width: 150px;
+
 }
 
 #hotelcard{
+    position: relative;
     display: flex;
-    justify-content: space-evenly;
+    
     box-shadow:10px 10px 10px rgb(65, 63, 63);
     margin-top: 30px;
     border-radius: 25%;
@@ -64,16 +52,32 @@
     width: 150px;
 }
 
-.alpha{
-    display: none;
-    top: 20px;
-    color: #f1f1f1;
-    margin-top: 30px;
+.overlay{
+    position: absolute;
+    top: 57.3%;
+    margin-left: 0%;
     border-radius: 25%;
     height: 150px;
     width: 150px;
+    background: rgba(0, 0, 0, 0.5);
+    background-size: cover;
+    color: #f1f1f1;
+    opacity: 0;
+    display: flex;
+    justify-content: center;
+    justify-items: center;
 }
 
+.overlay:hover{
+    opacity: 1;
+}
+
+
+.alpha{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .sec1{
     background-image: url("https://media-cdn.tripadvisor.com/media/photo-o/14/10/2e/af/india.jpg");
@@ -97,6 +101,7 @@
     border-radius: 12px;
     border: 1px transparent;
     width: 400px;
+    height: 40px;
     font-size: 16px;
     padding: 10px;
     margin-top: 207px;
