--- a/Hotel_Booking_Website_Starter_Code/styles/common.css
+++ b/Hotel_Booking_Website_Starter_Code/styles/common.css
@@ -5,14 +5,30 @@ html{
     font-family:  'Ubuntu', sans-serif;
 }
 
-.span{
+#sign-in-button{
     text-decoration: none;
     color: rgb(48, 46, 46); 
     margin: 1.2%;   
+    float: right;
 } 
+
+
+
+.divfoot{
+  margin-right: 10px;
+  margin-top: 10px;
+}
 
 .pf{
     font-size: 10px;
+    display: flex;
+    align-items: center;
+    
+}
+
+.fot{
+  display: flex;
+  justify-content: space-between;
 }
 
 body{
@@ -23,19 +39,17 @@ body{
     font-family:  'Ubuntu', sans-serif;
 }
 
-.contact{
+#sign-up-button{
     text-decoration: none;
+    margin-top: 10px;
     margin-left: 10px;
     color: rgb(48, 46, 46);
 }
 
-.divfoot{
-    margin-right: 15px;
-}
 
 header{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     background-color: rosybrown;
     width: 100%;
     position: fixed;
@@ -45,16 +59,13 @@ header{
 }
 footer{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    
     background-color: rosybrown;
     height: 60px;
     bottom: 0px;
     right: 0px;
     left: 0px;
-    align-items: center;
     position: fixed;
-    
 }
 
 /* cyrillic-ext */
