--- a/Hotel_Booking_Website_Starter_Code/styles/loader.css
+++ b/Hotel_Booking_Website_Starter_Code/styles/loader.css
@@ -9,5 +9,12 @@
     bottom: 0; 
     left: 0; 
     right: 0; 
-    margin: auto;
+    margin: auto; 
+    animation: spin 1s linear infinite;
 } 
+
+@keyframes spin { 
+    100% { 
+        transform: rotate(360deg); 
+    } 
+}  
