--- a/Hotel_Booking_Website_Starter_Code/styles/index.css
+++ b/Hotel_Booking_Website_Starter_Code/styles/index.css
@@ -1,9 +1,14 @@
-
 .view{
     bottom: 0px;
 }
 
 .maincontainer1{
+    display: flex;
+    background-color:#e0e0e0;
+    justify-content: space-evenly;
+}
+
+.maincontainer2{
     display: flex;
     background-color:#e0e0e0;
     justify-content: space-evenly;
@@ -54,7 +59,7 @@
 
 .overlay{
     position: absolute;
-    top: 57.3%;
+    top: 57.2%;
     margin-left: 0%;
     border-radius: 25%;
     height: 150px;
@@ -72,8 +77,38 @@
     opacity: 1;
 }
 
+.divspace{
+    opacity: 0;
+}
 
 .alpha{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.overlay1{
+    position: absolute;
+    top: 87.3%;
+    margin-left: 0%;
+    border-radius: 25%;
+    height: 150px;
+    width: 150px;
+    background: rgba(0, 0, 0, 0.5);
+    background-size: cover;
+    color: #f1f1f1;
+    opacity: 0;
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+}
+
+.overlay1:hover{
+    opacity: 1;
+}
+
+
+.alpha1{
     display: flex;
     justify-content: center;
     align-items: center;
